# iris-model-deployment

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile.fastapi  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yaml
data/: database.sqlite
loadtest/: locustfile.py
model_training/notebooks/: Data Extraction.ipynb  Model Development.ipynb
model_training/pipelines/: model_train.py  utils.py
notebooks/: Data Extraction.ipynb  Model Development.ipynb
src/app/: main.py
src/app/common/: models.py  router.py
src/app/core/: config.py  logger.py  store.py
src/app/core/aiohttp/: client.py
src/app/iris/: models.py  router.py  utils.py
src/bentoml/: bentofile.yaml  config.py  pack_model.py  service.py
src/bentoml/assets/: log_reg_1.pkl
tests/: .coveragerc  __init__.py  conftest.py
tests/common/: test_common_router.py
tests/core/: test_store.py
tests/core/aiohttp/: test_client.py
tests/iris/: test_router.py  test_utils.py
