[tool.poetry]
name = "iris"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
bentoml = "^1.0.14"
pydantic = "^1.10.4"
aiohttp = "^3.8.4"
fastapi = "^0.91.0"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.1"
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pre-commit = "^3.0.4"
pytest-cov = "^4.0.0"
pytest-dotenv = "^0.5.2"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
asyncmock = "^0.4.2"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
